# instructional-materials

./: README.org
exercises/cpp/01_gcd/: meson.build
exercises/cpp/01_gcd/doc/: 01_gcd.org
exercises/cpp/01_gcd/include/: gcd.h
exercises/cpp/01_gcd/src/: gcd.cpp  main.cpp
exercises/cpp/03_sorting/: meson.build
exercises/cpp/03_sorting/doc/: 03_sorting.org
exercises/cpp/03_sorting/include/: sorting.h
exercises/cpp/03_sorting/src/: main.cpp  sorting.cpp
exercises/cpp/03_sorting/tests/: test1.cpp
exercises/cpp/04_numbercheck/: meson.build  meson_options.txt
exercises/cpp/04_numbercheck/doc/: 04_numbercheck.org
exercises/cpp/04_numbercheck/include/: numbercheck.h
exercises/cpp/04_numbercheck/src/: main.cpp  numbercheck.cpp
exercises/cpp/04_numbercheck/tests/: test1.cpp
exercises/cpp/05_calc_awards/: marks.txt  meson.build  meson_options.txt
exercises/cpp/05_calc_awards/doc/: 05_calc_awards.org
exercises/cpp/05_calc_awards/include/: calc_awards.h  csv_utilities.h  file_utilities.h
exercises/cpp/05_calc_awards/src/: calc_awards.cpp  csv.cpp  csv_utilities.cpp  file_utilities.cpp  main.cpp
exercises/cpp/06_phone_dict/: meson.build  meson_options.txt
exercises/cpp/06_phone_dict/doc/: 06_phone_dict.org
exercises/cpp/06_phone_dict/include/: phone_dict.h
exercises/cpp/06_phone_dict/src/: main.cpp  main.cpp.bak  phone_dict.cpp
exercises/cpp/07_phone_dict2/: meson.build
exercises/cpp/07_phone_dict2/doc/: 07_phone_dict2.org  phone_numbers.json
exercises/cpp/07_phone_dict2/include/: dictionary.h  phone_dict.h  sll.h
exercises/cpp/07_phone_dict2/src/: dictionary.cpp  main.cpp  sll.cpp
exercises/cpp/07_phone_dict2/tests/: test1.cpp
exercises/cpp/08_stack/: meson.build  meson_options.txt
exercises/cpp/08_stack/doc/: 08_stack.org
exercises/cpp/08_stack/src/: main.cpp
exercises/cpp/08_stack/stack/: meson.build
exercises/cpp/08_stack/stack/include/: stack.h
exercises/cpp/08_stack/stack/src/: stack.cpp
exercises/cpp/08_stack/stack/tests/: test1.cpp
exercises/cpp/11_blackbox/: meson.build  meson_options.txt
exercises/cpp/11_blackbox/doc/: 11_blackbox.org
exercises/cpp/11_blackbox/include/: dictionary.h  measurement.h  phone_dict.h
exercises/cpp/11_blackbox/ringbuffer/: meson.build
exercises/cpp/11_blackbox/ringbuffer/include/: ringbuffer.h
exercises/cpp/11_blackbox/ringbuffer/tests/: test1.cpp
exercises/cpp/11_blackbox/src/: inputsim.cpp  inputsim_double.cpp  main.cpp  main_double.cpp
exercises/cpp/13_vmath/: meson.build
exercises/cpp/13_vmath/doc/: 13_vmath.org
exercises/cpp/13_vmath/include/: vmath.h
exercises/cpp/13_vmath/pystring/: meson.build
exercises/cpp/13_vmath/src/: main.cpp
exercises/distsys/01_processes/: CMakeLists.txt  meson.build
exercises/distsys/01_processes/doc/: 01_processes.org
exercises/distsys/01_processes/src/: aba.cpp  charout.cpp
exercises/distsys/02_threads/: CMakeLists.txt  meson.build
exercises/distsys/02_threads/doc/: 02_threads.org
exercises/distsys/02_threads/src/: main.cpp
exercises/distsys/03_sync1/: CMakeLists.txt  meson.build
exercises/distsys/03_sync1/doc/: 03_sync1.org
exercises/distsys/03_sync1/include/: account.h
exercises/distsys/03_sync1/src/: account.cpp  main.cpp
exercises/distsys/04_sync2/: CMakeLists.txt  meson.build
exercises/distsys/04_sync2/doc/: 04_sync2.org
exercises/distsys/04_sync2/include/: work_packet.h  work_queue.h
exercises/distsys/04_sync2/src/: main.cpp  work_queue.cpp
exercises/distsys/05_sync3/: CMakeLists.txt  meson.build  meson_options.txt
exercises/distsys/05_sync3/doc/: 05_sync3.org
exercises/distsys/05_sync3/include/: philosopher.h  semaphore_.h  utils.h
exercises/distsys/05_sync3/src/: dining.cpp  philosopher.cpp  semaphore.cpp  utils.cpp
exercises/distsys/06_future/: CMakeLists.txt  meson.build
exercises/distsys/06_future/doc/: 06_future.org
exercises/distsys/06_future/include/: InfInt.h
exercises/distsys/06_future/src/: main.cpp
exercises/distsys/08_daytime/: CMakeLists.txt  meson.build  meson_options.txt
exercises/distsys/08_daytime/doc/: 08_daytime.org  DaytimeServer.java
exercises/distsys/08_daytime/src/daytime_client/: main.cpp
exercises/distsys/08_daytime/src/daytime_server/: main.cpp
exercises/distsys/09_daytime_protobuf/: meson.build  meson_options.txt
exercises/distsys/09_daytime_protobuf/include/: printutils.h  timeutils.h
exercises/distsys/09_daytime_protobuf/src/: msg.proto
exercises/distsys/09_daytime_protobuf/src/daytime_client/: main.cpp
exercises/distsys/09_daytime_protobuf/src/daytime_server/: main.cpp
exercises/python/: turtle.cfg  turtle_docstringdict_german.py
src/automata/: aut.py  automat1.xcf  automat2.xcf  automat3.xcf  automata.org  beamerthemeExecushares.sty
src/backtracking/: backtracking.org  knightstour.py  results1.txt  results2.txt  results3.txt
src/character_encoding/: character_encoding.org  leb128.py
src/cmake_tutorial/: cmake_tutorial.org
src/cmake_tutorial/hello5/: CMakeLists.txt
src/cmake_tutorial/hello6/: CMakeLists.txt
src/cmake_tutorial/hello7/: CMakeLists.txt
src/cmake_tutorial/hello7/hello_static/: CMakeLists.txt
src/cmake_tutorial/hello9/: CMakeLists.txt
src/cmake_tutorial/hello9/include/: calc.h
src/cmake_tutorial/hello9/tests/: calc.cpp
src/cmake_tutorial/hello_junit/: CMakeLists.txt
src/cmake_tutorial/hello_junit/tests/: TestHelloWorld.java
src/cmake_tutorial/version_hg/: CMakeLists.txt
src/cmake_tutorial/version_hg/src/: config.h.in  version.cpp
src/codingconventions/: codingconventions.org
src/communication/: communication.org
src/compiler/: compiler.org  compiler_exa1.xcf  compiler_exa2.xcf  compiler_exa3.xcf  recursive_descent_iteration.xcf  recursive_descent_nonterminal.xcf  recursive_descent_optional.xcf  recursive_descent_selection.xcf  recursive_descent_sequence.xcf  recursive_descent_terminal.xcf  scanner_parser.xcf
src/complexity/: complexity.org
src/condition_synchronization/: condition_synchronization.org
src/cpp_intro/: property.cpp  property2.cpp  property3.cpp  property4.cpp
(+944 files in other folders)
