
option('CLI11_include_dir', type : 'string', value : '../builds/cli11/include')
option('fmt_include_dir', type : 'string', value : '../builds/fmt/include')
option('fmt_lib_dir', type : 'string', value : '../builds/fmt/build')
option('doctest_include_dir', type : 'string', value : '../builds/doctest/doctest')
option('json_include_dir', type : 'string', value : '../builds/json')
