option('CLI11_include_dir', type : 'string', value : '../builds/cli11/include')
option('fmt_include_dir', type : 'string', value : '../builds/fmt/include')
option('fmt_lib_dir', type : 'string', value : '../builds/fmt/build')
option('doctest_include_dir', type : 'string', value : '../builds/doctest/doctest')
option('json_include_dir', type : 'string', value : '../builds/json')
option('spdlog_include_dir', type : 'string', value : '../builds/spdlog/include')
option('spdlog_lib_dir', type : 'string', value : '../builds/spdlog/build')
option('magic_enum_include_dir', type : 'string', value : '../builds/magic_enum/include/magic_enum')
# https://gitlab.com/eidheim/tiny-process-library
option('tinyprocess_include_dir', type : 'string', value : '../builds/tiny-process-library/')
option('tinyprocess_lib_dir', type : 'string', value : '../builds/tiny-process-library/build')
option('date_include_dir', type : 'string', value : '../builds/date/include/date')
