option('asio_include_dir', type : 'string', value : '../builds/asio/include', description : 'the include dir of asio')
option('spdlog_include_dir', type : 'string', value : '../builds/spdlog/include', description : 'the include dir of spdlog')
option('spdlog_lib_dir', type : 'string', value : '../builds/spdlog/build', description : 'the include dir of spdlog')
option('cli11_include_dir', type : 'string', value : '../builds/cli11/include', description : 'the include dir of cli11')
